:sparkles: Added Basic JS
Find the user's bday using if-statements

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <button id = "music">||</button>
         <button id = "help">?</button>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
