--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div class = "background">
         <div class = "box">
-            <h1>Which Stardew Valley Character are You?</h1>
-            <label id = "change">Please Enter your Birthday:</label>
+            <div class = "box__title">
+                <h1 class="box__title-question">Which Stardew Valley Character are You?</h1>
+                <label id = "change">Please Enter your Birthday:</label>
+            </div>
             <!--info from w3schools-->
-            <form>
+            <form class="box__form">
                 <input type="text" id="month" name="month" value = "MM">
                 <!--<p class = "slash"> / </p>-->
                 <input type="text" id="day" name="day" value = "DD">
@@ -22,15 +24,15 @@
                 <input type="text" id="year" name="year" value = "YY">
             </form>
             <br>
-            <img src="Assets/Images/Chicken.png" alt="Maru">
+            <img class="box__img" src="Assets/Images/Chicken.png" alt="Chicken">
             <br>
             <!--I want this button to change its text when clicked-->
-            <button id = "findButton">Find Your Character!</button>
+            <button class = "box__button">Find Your Character!</button>
         </div>
 
         <!--I want this button to change its text when clicked-->
-        <button id = "music">||</button>
-        <button id = "help">?</button>
+        <button class = "music">||</button>
+        <button class = "help">?</button>
     </div>
     <script src="main.js"></script>
 </body>
