--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 <body>
     <div class = "background">
 
-        <audio class = "js-music" autoplay loop>
+        <audio class = "js-music" loop>
             <source src ="Assets/Stardew-Valley-OST-Stardew-Valley-Overture.ogg" type ="audio/ogg">
             <source src="/Assets/Stardew Valley OST - Stardew Valley Overture.mp3" type="audio/mpeg">
         </audio> 
-         <!--I want this button to change its text when clicked-->
-         <button class = "music js-music-button">
-            <img class="js-music-button-img" src="Assets/Images/Pause.png" alt="Play/Pause">
-        </button>
-        <button class = "help js-help-button">?</button>
+        <div class = "controls">
+            <!--I want this button to change its text when clicked-->
+            <button class = "music js-music-button">
+                <img class="js-music-button-img" src="Assets/Images/Play.png" alt="Play/Pause Button">
+            </button>
+            <button class = "help js-help-button">
+                <img class="js-music-button-img" src="Assets/Images/Help.png" alt="Help Button">
+            </button>
+        </div>
+         
         <div class = "box">
             <div class = "box__title">
                 <h1 class="box__title-question">Which Stardew Valley Character are You?</h1>
