:lipstick: added a p element to give users directions

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 <div class = "box__title">
                     <h1 class="box__title-question">Which Stardew Valley Character are You?</h1>
                 </div>
-                <!--info from w3schools-->
+                <p class="main_box__direction">Please Enter Your Birtday:</p>
                 <form class="box__form">
-                    <!-- <label for = "date">Please Enter your Birthday:</label> -->
-                    <input id="date" type="date" value = "">
+                    <!-- <label for = "date">Please Enter your Birthday:</label>
+                    <br> -->
+                    <input id="date" type="date">
                 </form>
                 <img class="box__img js-main-img" src="Assets/Images/Chicken.png" alt="Chicken">
 
