:recycle: improved help button code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class = "box help__help-text help__help-text--close js-help-box">
                     <!--This is the close button-->
                     <button class="help__close-button js-help-close-button">
-                        X
+                        <img class="js-close-button-img" src="Assets/Images/Close.png" alt="Close Button">
                     </button>
                     <h1 class="help__help-text--title">Welcome to Stardew Valley Zodiac!</h1>
                     <p class="help__help-text--par">
