:construction: fixed two typos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <audio class = "js-music" loop>
             <source src ="Assets/Stardew-Valley-OST-Stardew-Valley-Overture.ogg" type ="audio/ogg">
-            <source src="/Assets/Stardew Valley OST - Stardew Valley Overture.mp3" type="audio/mpeg">
+            <source src="Assets/Stardew Valley OST - Stardew Valley Overture.mp3" type="audio/mpeg">
         </audio> 
         
         
@@ -40,12 +40,10 @@
                     <p class="help__help-text--par">
                         In this game, you’ll be able to find out which character’s birthday you match with.
                     </p>
-                    <p class="help__help-text--par">
-                        <ol class="help__help-text--list">
-                            <li>Enter your birthday in the [MM/DD/YY] text box.</li>
-                            <li>Press on the [Find Your Character] button.</li>
-                        </ol>
-                    </p>
+                    <ol class="help__help-text--list">
+                        <li>Enter your birthday in the [MM/DD/YY] text box.</li>
+                        <li>Press on the [Find Your Character] button.</li>
+                    </ol>
                     <p class="help__help-text--par">
                         To pause or play the music, press on the play/pause button in the top right corner.
                     </p>
