--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class = "background">
 
         <audio class = "js-music" loop>
-            <source src ="Assets/Stardew-Valley-OST-Stardew-Valley-Overture.ogg" type ="audio/ogg">
-            <source src="Assets/Stardew Valley OST - Stardew Valley Overture.mp3" type="audio/mpeg">
+            <source src ="Assets/StardewValleyOverture.ogg" type ="audio/ogg">
+            <source src="Assets/StardewValleyOverture.mp3" type="audio/mpeg">
         </audio> 
         
         
