:lipstick: style changes

--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
                 </button>
             </div>
             <div class = "characters js-characters">
-                <class class = "characters__card">
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Linus.png" alt = "Linus">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Wizard.png" alt = "Wizard">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Clint.png" alt = "Clint">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Kent.png" alt = "Kent">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Vincent.png" alt = "Vincent">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Emily.png" alt = "Emily">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Maru.png" alt = "Maru">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Sam.png" alt = "Sam">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Willy.png" alt = "Willy">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Penny.png" alt = "Penny">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Sandy.png" alt = "Sandy">
-                </class>
-                <class class = "characters__card">
+                </div>
+                <div class = "characters__card">
                     <img class = "characters__card__img js-character-card-img" src="Assets/Images/Robin.png" alt = "Robin">
-                </class>
+                </div>
             </div>
             <!--This is the help button-->
             <div class = "help">
