:pencil2: updated help screen

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                         <li>Press on the [Find Your Character] button.</li>
                     </ol>
                     <p class="help__help-text--par">
+                        Click on the Easter Egg to discover all the characters!
+                    </p>
+                    <p class="help__help-text--par">
                         To pause or play the music, press on the play/pause button in the top right corner.
                     </p>
                 </div>
